@@ -2,7 +2,7 @@
  * ProFTPD: mod_quotatab -- a module for managing FTP byte/file quotas via
  *                          centralized tables
  *
- * Copyright (c) 2001-2004 TJ Saunders
+ * Copyright (c) 2001-2006 TJ Saunders
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -23,13 +23,13 @@
  * resulting executable, without including the source code for OpenSSL in the
  * source distribution.
  *
- * This is mod_quotatab, contrib software for proftpd 1.2 and above.
+ * This is mod_quotatab, contrib software for proftpd 1.2/1.3.x and above.
  * For more information contact TJ Saunders <tj@castaglia.org>.  It is based
  * the ideas in Eric Estabrook's mod_quota, available from
  * ftp://pooh.urbanrage.com/pub/c/.  This module, however, has been written
  * from scratch to implement quotas in a different way.
  *
- * $Id: mod_quotatab.h,v 1.6 2004-12-16 22:55:46 castaglia Exp $
+ * $Id: mod_quotatab.h,v 1.7 2006-04-21 16:26:30 castaglia Exp $
  */
 
 #ifndef MOD_QUOTATAB_H
@@ -38,7 +38,7 @@
 #include "conf.h"
 #include "privs.h"
 
-#define MOD_QUOTATAB_VERSION "mod_quotatab/1.2.14"
+#define MOD_QUOTATAB_VERSION "mod_quotatab/1.3.0"
 
 /* Make sure the version of proftpd is as necessary. */
 #if PROFTPD_VERSION_NUMBER < 0x0001030001
