@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.753 2006-04-21 01:32:31 castaglia Exp $
+$Id: NEWS,v 1.754 2006-04-21 16:26:30 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -43,6 +43,13 @@ CVS
 - Bug 2733 - IP TOS not being set for data transfers.  Other socket-level
   options were not being properly honored for data transfers, too.
 - Added mod_ban.  See doc/contrib/mod_ban.html for more details.
+- Enhanced the mod_sql API to allow other modules (such as mod_conf_sql)
+  to make fuller use of SQL databases via mod_sql.
+- Bug 2713 - Ability to check a user's existing disk bytes/files usage and
+  update tally accordingly.  The mod_quotatab module now has a QuotaOptions
+  directive, one of whose parameters is ScanOnLogin, which directs the
+  module to update existing tallies after scanning the user's home
+  directory.
 
 1.3.0 - Released 16-Apr-2006
 --------------------------------
